<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login">

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/register_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:fontFamily="@font/inter_extrabold"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:text="@string/new_account" />

        <EditText
            android:id="@+id/register_edtx_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cust_edtx_background_input"
            android:padding="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:drawableStart="@drawable/baseline_account_circle_24_navy"
            android:drawablePadding="10dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey"
            android:fontFamily="@font/inter_semibold"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:hint="@string/username"
            tools:ignore="VisualLintTextFieldSize"/>

        <EditText
            android:id="@+id/register_edtx_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cust_edtx_background_input"
            android:padding="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:drawableStart="@drawable/baseline_email_24_navy"
            android:drawablePadding="10dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey"
            android:fontFamily="@font/inter_semibold"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            tools:ignore="VisualLintTextFieldSize"/>

        <EditText
            android:id="@+id/register_edtx_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cust_edtx_background_input"
            android:padding="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:drawableStart="@drawable/baseline_password_24_navy"
            android:drawablePadding="10dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey"
            android:fontFamily="@font/inter_semibold"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:hint="@string/password"
            tools:ignore="VisualLintTextFieldSize"/>

        <EditText
            android:id="@+id/register_edtx_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cust_edtx_background_input"
            android:padding="15dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:ems="10"
            android:drawableStart="@drawable/baseline_key_off_24_navy"
            android:drawablePadding="10dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textColorHint="@color/light_grey"
            android:fontFamily="@font/inter_semibold"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:hint="@string/confirm_password"
            tools:ignore="VisualLintTextFieldSize" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_marginTop="60dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/inter_bold"
            android:background="@drawable/cust_button_log_reg"
            android:text="@string/register" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/Register_textview_haveAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/no_account" />

            <Button
                android:id="@+id/register_button_toLogin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@color/transparent"
                android:textAllCaps="false"
                android:includeFontPadding="false"
                android:letterSpacing="0"
                android:fontFamily="@font/inter_bold"
                android:textSize="18sp"
                android:textColor="@color/cust_Mint"
                android:text="@string/login_here" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>

