<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_schedule"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="10dp"
    >

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp">

        <TextView
            android:id="@+id/item_schedule_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:padding="2dp"
            android:text="@string/game_name"/>

        <TextView
            android:id="@+id/item_schedule_text_venue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_schedule_text_name"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:padding="2dp"
            android:text="@string/venue"/>

        <TextView
            android:id="@+id/item_schedule_text_dateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_schedule_text_venue"
            android:fontFamily="@font/inter_bold"
            android:textSize="18sp"
            android:padding="2dp"
            android:text="@string/date_time"/>

<!--        <TextView-->
<!--            android:id="@+id/item_schedule_text_dayMin"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:minWidth="65dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_alignParentTop="true"-->
<!--            android:background="@drawable/cust_day_min"-->
<!--            android:paddingEnd="10dp"-->
<!--            android:paddingStart="10dp"-->
<!--            android:paddingTop="5dp"-->
<!--            android:paddingBottom="5dp"-->
<!--            android:textAlignment="center"-->
<!--            android:fontFamily="@font/inter_bold"-->
<!--            android:textSize="18sp"-->
<!--            android:textColor="@color/white"-->
<!--            android:text="@string/day_min"/>-->

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/item_schedule_button_buyTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_schedule_text_dateTime"
            android:layout_marginTop="15dp"
            android:background="@drawable/cust_button_log_reg"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/buy_ticket"
            tools:ignore="VisualLintButtonSize"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>